# indra_world

./: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg
.github/workflows/: tests.yml
doc/: conf.py  index.rst  modules.rst  requirements.txt  service.rst
doc/modules/: belief.rst  index.rst
docker/: Dockerfile  README.md  docker-compose.yml  initialize_db_image.sh
indra_wm_service/: __init__.py  app.py  corpus.py  corpus_manager.py  curator.py  live_curation.py
indra_wm_service/assemblers/: tsv.py
indra_wm_service/assembly/: dart.py  incremental_assembler.py  operations.py  stats.py
indra_wm_service/assembly_dashboard/: app.py  default_pipeline.json
indra_wm_service/controller/: controller.py
indra_wm_service/db/: manager.py  schema.py
indra_wm_service/resources/: assembly_compositional_december2020.json  assembly_compositional_phase3.json  statement_preparation.json
indra_wm_service/sources/: dart.py
indra_wm_service/tests/: compositional_refinement_cycle_test.json  eidos_compositional.jsonld  sample_curations.json  test_assembly.py  test_curation_assembly.py  test_curations.json  test_db_manager.py  test_incremental_assember.py  test_incremental_assembler.py  test_live_curation.py  test_rest_api.py  test_service_controller.py
indra_world/: __init__.py  app.py  belief.py  cli.py  corpus.py  corpus_manager.py  curator.py  live_curation.py
indra_world/assemblers/: tsv.py
scripts/: august_embeds.py  dec2020_compositional.py  grounding_concept_of_process.py  phase3.py  string_flattening_sample.py  theme_process_property_and_reverse.py
(+92 files in other folders)
