[metadata]
name = indra_world
version = 1.0.0
description = INDRA knowledge assembly generalized to socio-economic systems
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin M. Gyori
author_email = benjamin_gyori@hms.harvard.edu
url = https://github.com/indralab/indra_world
download_url = https://github.com/indralab/indra_world/releases
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    indra @ git+https://github.com/johnbachman/indra.git@skl_belief
    pyyaml
    openpyxl
    flask
    flask_wtf
    flask_bootstrap
    flask_restx
    sqlalchemy

include_package_data = True
python_requires = >=3.6

[options.extras_require]
tests =
    nose
    coverage
eidos_offline =
    cython
    pyjnius==1.1.4
